$Id: ChangeLog,v 1.23 2004/03/23 16:31:18 h_oudejans Exp $

2004-03-25 Herman Oudejans <hn.oudejans@quicknet.nl>
	* updates from openmsx result now in update to the controls
	   (all but the dynamic audio controls)
	* Added the layout of the launchbutton / Leds a bit

2004-03-23 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Implemented autoappy for textcontrols
	* Removed apply en quit buttons
	* Move leds from statuspage to global
	* Finished the midi/sample sound I/O part

2004-03-22 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added midi in/out and sample input plugins
	* Filenames still need to be done
	
2004-03-21 Manuel Bilderbeek <manuel@msxnet.org>
	* removed Mute button from MiscControls, made the new one in
	  AudioControls functional
	* some code layout clean ups
	* set status properly during hidden launch

2004-03-21 Herman Oudejans <hn.oudejans@quicknet.nl>
	* use openmsx_info sounddevice <device> to query the devicetype.
	* Moonsound devices are now noted as stereo.
	* linux comboboxwidth in audiomixer is for now fixed on 40 pixels.
	* When not availble, mastervolume is disabled and sliders are ranged
	   from 0-32767.
	* When available, the 'unset' command is used instead of 'restoredefault'

2004-03-20 Manuel Bilderbeek <manuel@msxnet.org>
	* added frames per second display in status bar
	* set status in status bar (could be expanded)

2004-03-19 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added audiocontrolspage
	* fixed volume (voor devices containing a space)
	* fixed compile error in linux

2004-03-06 Maarten ter Huurne <maarten@treewalker.org>
	* Moved build files to a subdir named "build".
	* Define RESOURCEDIR from within build process.
	  For the time being, developers should edit "build/config.mk" and set
	  INSTALL_BASE to "<catapult_dir>/derived".

2004-03-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* adapted for openmsx cvs Changelog version 1.1156 (openmsx_info 
	  command output is now a tcl-list).
