@@ -1,4 +1,4 @@
-// $id: $
+// $Id: $
 // AudioControlPage.h: interface for the AudioControlPage class.
 //
 //////////////////////////////////////////////////////////////////////
