@@ -1,4 +1,4 @@
-// $Id: $
+// $Id: CatapultPage.h,v 1.2 2004/03/25 19:30:12 h_oudejans Exp $
 // CatapultPage.h: interface for the CatapultPage class.
 //
 //////////////////////////////////////////////////////////////////////
@@ -11,6 +11,7 @@
 #endif // _MSC_VER > 1000
 
 #include <wx/tglbtn.h>
+#define SETTINGTABLE_MAXSIZE 22
 
 class CatapultPage : public wxPanel 
 {
@@ -30,15 +31,18 @@ private:
 		bool convert;
 	};
 	
-	SettingTableElementType * m_settingsTable;
+	SettingTableElementType * m_settingTable;
+	int m_settingTableSize;
 	void InitSettingsTable ();
-	void AddSetting (int number,wxString settings, wxString controlname,
+	void AddSetting (wxString settings, wxString controlname,
 		bool (CatapultPage::*pfunction)(wxString,wxString,wxString,bool),
 		bool convert);
 	wxWindow * m_parent;
 	bool UpdateToggleSetting(wxString setting, wxString data, wxString control, bool convert);
 	bool UpdateComboSetting(wxString setting, wxString data, wxString control, bool convert);
 	bool UpdateIndicatorSetting(wxString setting, wxString data, wxString control, bool dummy);
+	bool UpdateAudioSetting (wxString setting, wxString data, wxString selection, bool dummy2);
+	
 };
 
 #endif 
